--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,18 +1,16 @@
+# frontend/Dockerfile
+
 # Stage 1: Build the React app
 FROM node:20 as build
 
 WORKDIR /app
-
 COPY . .
-
 RUN npm install
 RUN npm run build
 
 # Stage 2: Serve with Nginx
 FROM nginx:alpine
-
 COPY --from=build /app/dist /usr/share/nginx/html
 
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
